# slashdot_crawler

./: .gitignore  README.md  pyproject.toml
slashdot_crawler/: scrapy.cfg
slashdot_crawler/slashdot_crawler/: items.py  middlewares.py  pipelines.py  settings.py
slashdot_crawler/slashdot_crawler/spiders/: slashdot_spider.py
